[gd_scene load_steps=21 format=2]

[ext_resource path="res://World/Objects/Projectiles/Hitbox.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Magic/lightning/4/Electric_Effect_03.png" type="Texture" id=2]
[ext_resource path="res://World/Objects/Magic/Lightning/LightningStrike.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sound/Sound effects/Magic/Lightning/lightning strike.wav" type="AudioStream" id=4]

[sub_resource type="Curve" id=177]
min_value = -400.0
max_value = 400.0
_data = [ Vector2( 0, 385.586 ), 0.0, 4106.75, 0, 0, Vector2( 0.145695, 400 ), -4058.02, -4058.02, 0, 0, Vector2( 1, -274.829 ), 711.573, 0.0, 0, 0 ]

[sub_resource type="Curve" id=178]
max_value = 2.0
_data = [ Vector2( 0, 1.38739 ), 0.0, 0.0, 0, 0, Vector2( 0.504636, 1.22523 ), -3.6694, -3.6694, 0, 0, Vector2( 1, 1.10811 ), 1.30804, 0.0, 0, 0 ]

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 144 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 144 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 144 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 80, 144 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 80, 144 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 2 )
region = Rect2( 80, 144, 80, 144 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 2 )
region = Rect2( 160, 144, 80, 144 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 2 )
region = Rect2( 240, 144, 80, 144 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 2 )
region = Rect2( 0, 288, 80, 144 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 2 )
region = Rect2( 80, 288, 80, 144 )

[sub_resource type="AtlasTexture" id=176]
atlas = ExtResource( 2 )
region = Rect2( 160, 288, 80, 144 )

[sub_resource type="SpriteFrames" id=163]
animations = [ {
"frames": [ SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ) ],
"loop": false,
"name": "play",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=164]
resource_local_to_scene = true
radius = 114.018

[sub_resource type="Animation" id=165]
resource_name = "play"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, false, true, false, true, false, true ]
}

[node name="LightningStrike" type="Node2D"]
script = ExtResource( 3 )

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
modulate = Color( 1.3, 1.3, 1.3, 1 )
emitting = false
amount = 600
lifetime = 2.0
one_shot = true
explosiveness = 0.8
lifetime_randomness = 0.7
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2( 0, 0 )
linear_accel = 100.0
linear_accel_random = 1.0
linear_accel_curve = SubResource( 177 )
radial_accel = 100.0
radial_accel_random = 0.5
scale_amount = 2.5
scale_amount_random = 0.5
scale_amount_curve = SubResource( 178 )
color = Color( 1, 1, 0.301961, 1 )

[node name="ExplosionParticles2" type="CPUParticles2D" parent="."]
modulate = Color( 1.3, 1.3, 1.3, 1 )
emitting = false
amount = 200
lifetime = 2.0
one_shot = true
explosiveness = 0.8
lifetime_randomness = 0.7
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2( 0, 0 )
linear_accel = 100.0
linear_accel_random = 1.0
linear_accel_curve = SubResource( 177 )
radial_accel = 100.0
radial_accel_random = 0.5
scale_amount = 2.5
scale_amount_random = 0.5
scale_amount_curve = SubResource( 178 )
color = Color( 0.462745, 0.854902, 0.917647, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, -79 )
scale = Vector2( 2, 2 )
frames = SubResource( 163 )
animation = "play"
frame = 4

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 264192
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 164 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/play = SubResource( 165 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
